--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^5.3.0"
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "lerna": "^5.3.0",
+    "prettier": "^2.7.1"
+  },
+  "volta": {
+    "node": "16.16.0"
   }
 }
