--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -25,6 +25,7 @@
     "@backstage/core-plugin-api": "^1.0.3",
     "@backstage/errors": "^1.1.0",
     "@backstage/plugin-auth-backend": "^0.15.0",
+    "keyv": "^4.3.3",
     "ldap-authentication": "^2.2.9",
     "ldap-escape": "^2.0.6",
     "ldapjs": "^2.3.3"
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@backstage/cli": "^0.18.0",
     "@types/ldap-authentication": "^2.2.0",
+    "@types/ldap-escape": "^2.0.0",
     "@types/node": "^16.11.26"
   },
   "files": [
