chore: aligned to official plugin structure

--- a/packages/ldap-auth-backend/tsconfig.json
+++ b/packages/ldap-auth-backend/tsconfig.json
@@ -1,4 +1,13 @@
 {
-  
-  "extends": "../../tsconfig.json",
+  "extends": "@backstage/cli/config/tsconfig.json",
+  "include": [
+    "src",
+    "dev",
+    "migrations"
+  ],
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "outDir": "dist-types",
+    "rootDir": "."
+  }
 }
