--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@immobiliarelabs/backstage-plugin-ldap-auth-backend",
   "version": "1.0.0-0",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.cjs.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "backstage-cli package start",
+    "prebuild": "tsc",
     "build": "backstage-cli package build",
     "lint": "backstage-cli package lint",
     "test": "backstage-cli package test",
