ci: adds lerna publish commands

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   },
   "volta": {
     "node": "16.16.0"
+  },
+  "scripts": {
+    "release": "lerna publish --conventional-graduate --yes",
+    "next": "lerna version --conventional-prerelease"
   }
 }
