--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@immobiliarelabs/backstage-plugin-ldap-auth-backend",
-  "version": "1.0.0-0",
+  "version": "1.0.0-alpha.0",
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
