--- a/packages/ldap-auth/package.json
+++ b/packages/ldap-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@immobiliarelabs/backstage-plugin-ldap-auth",
-  "version": "1.0.0-0",
+  "version": "1.0.0-alpha.0",
   "main": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -47,8 +47,8 @@
     "@testing-library/user-event": "^14.0.0",
     "@types/jest": "^26.0.7",
     "@types/node": "^16.11.26",
-    "msw": "^0.44.0",
-    "cross-fetch": "^3.1.5"
+    "cross-fetch": "^3.1.5",
+    "msw": "^0.44.0"
   },
   "files": [
     "dist"
