--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,17 +4,35 @@ on: [workflow_dispatch]
 
 jobs:
   release:
+    name: Release to NPM
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 18
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - uses: plutotcool/release@v1
-      with:
-        github_token:  ${{ secrets.GH_NODE_TOKEN }}
-        npm_token: ${{ secrets.NPM_PUBLISH_TOKEN }}
-        name: "${{ github.actor }}"
-        email: "${{ github.actor }}"
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Config git user
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+      
+      - name: Bootstrap lerna
+        run: yarn bootstrap
+
+      - name: Bump versions
+        run: yarn version:ci
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+
+      - name: Publish packages
+        if: ${{ env.NODE_AUTH_TOKEN }}
+        run: yarn publish:ci
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
