--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,6 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": true,
   "useWorkspaces": true,
+  "npmClient": "yarn",
   "version": "1.0.0-alpha.1"
 }
