--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,10 @@ jobs:
         name: Release
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
               with:
+                  token: ${{ secrets.GH_NODE_TOKEN }}
+                  persist-credentials: false
                   fetch-depth: 0
 
             - uses: actions/setup-node@v3
