--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
               run: |
                   git config --global user.name "${{ github.actor }}"
                   git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+                  git remote set-url origin "git@github.com:${{ github.repository }}"
 
             - name: Bootstrap lerna
               run: yarn bootstrap
