--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -30,6 +30,7 @@
         "@backstage/core-plugin-api": "^1.0.3",
         "@backstage/errors": "^1.1.0",
         "@backstage/plugin-auth-backend": "^0.15.0",
+        "jsonwebtoken": "^8.5.1",
         "keyv": "^4.3.3",
         "ldap-authentication": "^2.2.9",
         "ldap-escape": "^2.0.6",
