--- a/.github/workflows/security-checks.yml
+++ b/.github/workflows/security-checks.yml
@@ -8,4 +8,4 @@ jobs:
             - name: Run Snyk to check for vulnerabilities
               uses: snyk/actions/node@master
               env:
-                  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+                  SNYK_TOKEN: ${{ secrets.SNYK_AUTH_TOKEN }}
