--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,13 +30,22 @@ jobs:
             - name: Lerna build
               run: yarn build
 
-            - name: Bump versions
-              run: yarn version:ci
+            - name: Bump release
+              if: github.ref == 'refs/heads/master'
+              run: yarn version:release
+              env:
+                  GH_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+
+            - name: Bump prerelease
+              if: github.ref != 'refs/heads/master'
+              run: yarn version:prerelease
               env:
                   GH_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
             - name: Publish packages
+              if: github.ref == 'refs/heads/master'
               run: yarn publish:ci
               env:
                   GH_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
