--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useNx": true,
-  "useWorkspaces": true,
-  "npmClient": "yarn",
-  "version": "1.0.3"
+    "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+    "useNx": true,
+    "useWorkspaces": true,
+    "npmClient": "yarn",
+    "version": "1.0.4-alpha.0"
 }
