--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "build": "npx lerna run build",
         "bootstrap": "npx lerna bootstrap",
         "publish:ci": "lerna publish from-package --yes",
-        "version:ci": "lerna version --yes --conventional-commits --conventional-graduate --create-release github --message 'chore(release): publish'",
+        "version:release": "lerna version --yes --conventional-commits --conventional-graduate --create-release github --message 'chore(release): publish'",
+        "version:prerelease": "lerna version --yes --conventional-commits --conventional-prerelease --create-release github --message 'chore(prerelease): publish'",
         "prepare": "node prepare.js || echo 'Skipping prepare'"
     }
 }
