--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "prettier": "^2.7.1"
     },
     "engines": {
-        "node": ">=16"
+        "node": ">=16",
+        "backstage": ">=0.15.0"
     },
     "volta": {
         "node": "16.16.0"
