--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,21 +31,20 @@ jobs:
               run: yarn build
 
             - name: Bump release
-              if: github.ref == 'refs/heads/master'
+              if: github.ref == 'refs/heads/main'
               run: yarn version:release
               env:
                   GH_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
             - name: Bump prerelease
-              if: github.ref != 'refs/heads/master'
+              if: github.ref != 'refs/heads/main'
               run: yarn version:prerelease
               env:
                   GH_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
             - name: Publish packages
-              if: github.ref == 'refs/heads/master'
               run: yarn publish:ci
               env:
                   GH_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
