--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -18,8 +18,8 @@
     },
     "scripts": {
         "start": "backstage-cli package start",
-        "prebuild": "tsc",
-        "build": "backstage-cli package build",
+        "types": "tsc",
+        "build": "yarn types && backstage-cli package build",
         "lint": "backstage-cli package lint",
         "test": "backstage-cli package test",
         "clean": "backstage-cli package clean",
