--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
         "prettier": "^2.7.1"
     },
     "engines": {
-        "node": ">=16",
-        "backstage": ">=0.15.0"
+        "node": ">=16"
     },
     "volta": {
         "node": "16.16.0"
