--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@immobiliarelabs/backstage-plugin-ldap-auth-backend",
     "description": "Backstage LDAP Authentication plugin, this packages adds backend authentication and token generation/validation/management; sibling of @immobiliarelabs/backstage-plugin-ldap-auth",
-    "version": "1.0.4-alpha.2",
+    "version": "1.0.4",
     "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts",
     "license": "MIT",
