--- a/.github/workflows/security-checks.yml
+++ b/.github/workflows/security-checks.yml
@@ -7,13 +7,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@main
-            
+
             - name: Setup Node
               uses: actions/setup-node@v3
               with:
                   node-version: lts/*
-            
-            - run: npm i
+
+            - run: yarn
 
             - name: Run Snyk to check for vulnerabilities
               uses: snyk/actions/node@master
