--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "bootstrap": "npx lerna bootstrap",
         "publish:ci": "lerna publish from-package --yes",
         "version:release": "lerna version --yes --conventional-commits --conventional-graduate --create-release github --message 'chore(release): publish'",
-        "version:prerelease": "lerna version --yes --conventional-commits --conventional-prerelease --conventional-bump-prerelease --create-release github --message 'chore(prerelease): publish'",
+        "version:prerelease": "lerna version --yes --force-publish --conventional-commits --conventional-prerelease --create-release github --message 'chore(prerelease): publish'",
         "prepare": "node prepare.js || echo 'Skipping prepare'"
     }
 }
