--- a/.github/workflows/merge-dependabot.yml
+++ b/.github/workflows/merge-dependabot.yml
@@ -7,6 +7,10 @@ jobs:
         runs-on: ubuntu-latest
         if: ${{ github.actor == 'dependabot[bot]' }}
         steps:
+            - uses: actions/checkout@v3
+              with:
+                  persist-credentials: false
+
             - name: Dependabot metadata
               id: metadata
               uses: dependabot/fetch-metadata@v1.3.5
@@ -18,4 +22,4 @@ jobs:
               run: gh pr merge --auto --merge "$PR_URL"
               env:
                   PR_URL: ${{github.event.pull_request.html_url}}
-                  GITHUB_TOKEN: ${{secrets.GH_NODE_TOKEN}}
+                  GITHUB_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
