--- a/.github/workflows/merge-dependabot.yml
+++ b/.github/workflows/merge-dependabot.yml
@@ -15,11 +15,11 @@ jobs:
               id: metadata
               uses: dependabot/fetch-metadata@v1.3.5
               with:
-                  github-token: '${{ secrets.GH_NODE_TOKEN }}'
+                  github-token: '${{ secrets.GITHUB_TOKEN }}'
 
             - name: Enable auto-merge for Dependabot PRs
               if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
               run: gh pr merge --auto --merge "$PR_URL"
               env:
-                  PR_URL: ${{github.event.pull_request.html_url}}
+                  PR_URL: ${{ github.event.pull_request.html_url }}
                   GITHUB_TOKEN: ${{ secrets.GH_NODE_TOKEN }}
