--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "style:lint": "eslint packages --ext .ts",
         "style:prettier": "prettier \"packages/**/*.ts\" --list-different --write",
         "build": "npx lerna run build",
+        "test": "lerna run test:ci",
         "bootstrap": "npx lerna bootstrap",
         "publish:ci": "lerna publish from-package --yes --pre-dist-tag alpha",
         "version:release": "lerna version --yes --conventional-commits --conventional-graduate --create-release github --message 'chore(release): publish'",
