--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -22,6 +22,7 @@
         "build": "yarn types && backstage-cli package build",
         "lint": "backstage-cli package lint",
         "test": "backstage-cli package test",
+        "test:ci": "backstage-cli package test --watch false",
         "clean": "backstage-cli package clean",
         "prepack": "backstage-cli package prepack",
         "postpack": "backstage-cli package postpack"
