--- a/packages/ldap-auth/package.json
+++ b/packages/ldap-auth/package.json
@@ -22,6 +22,7 @@
         "build": "yarn types && backstage-cli package build",
         "lint": "backstage-cli package lint",
         "test": "backstage-cli package test",
+        "test:ci": "backstage-cli package test --watch false",
         "clean": "backstage-cli package clean",
         "prepack": "backstage-cli package prepack",
         "postpack": "backstage-cli package postpack"
@@ -50,7 +51,11 @@
         "@types/jest": "^29.0.3",
         "@types/node": "^18.7.23",
         "cross-fetch": "^3.1.5",
-        "msw": "^0.49.0"
+        "msw": "^0.49.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router": "^6.4.5",
+        "react-router-dom": "^6.4.5"
     },
     "files": [
         "dist"
