--- a/.github/workflows/merge-dependabot.yml
+++ b/.github/workflows/merge-dependabot.yml
@@ -16,14 +16,14 @@ jobs:
               id: metadata
               uses: dependabot/fetch-metadata@v1.5.1
 
-            - name: Enable auto-merge for Dependabot PRs
+            - name: Auto-merge patches
               if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
               run: gh pr merge --auto --merge "$PR_URL"
               env:
                   GH_TOKEN: ${{ secrets.DEPENDABOT_NODE_TOKEN }}
                   PR_URL: ${{github.event.pull_request.html_url}}
 
-            - name: Enable auto-merge for Dependabot PRs
+            - name: Auto-merge dev-deps
               if: ${{ steps.dependabot-metadata.outputs.dependency-type == "direct:development" && steps.metadata.outputs.update-type == 'version-update:semver-minor' }}
               run: gh pr merge --auto --merge "$PR_URL"
               env:
