--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
     "$schema": "node_modules/lerna/schemas/lerna-schema.json",
     "useNx": true,
-    "useWorkspaces": true,
     "npmClient": "yarn",
-    "version": "3.0.2-alpha.0"
+    "version": "7.2.0"
 }
