--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,34 @@ jobs:
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
             - uses: webiny/action-conventional-commits@v1.1.0
+    type-checker:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: 18.x
 
+            - name: Install dependencies
+              run: yarn install --immutable
+
+            - name: Test
+              run: yarn tsc --noEmit
+    fmt-checker:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: 18.x
+            - name: Install dependencies
+              run: yarn install
+            - name: Test
+              run: yarn prettier --check .
     test:
         runs-on: ubuntu-latest
         steps:
