--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "lerna": "^7.2.0",
         "lint-staged": "^13.0.3",
         "markdown-toc": "^1.2.0",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "typescript": "^5.2.2"
     },
     "engines": {
         "node": ">=18.0.0"
