--- a/packages/ldap-auth-backend/tsconfig.json
+++ b/packages/ldap-auth-backend/tsconfig.json
@@ -1,13 +1,9 @@
 {
-  "extends": "@backstage/cli/config/tsconfig.json",
-  "include": [
-    "src",
-    "dev",
-    "migrations"
-  ],
-  "exclude": ["node_modules"],
-  "compilerOptions": {
-    "outDir": "dist-types",
-    "rootDir": "."
-  }
+    "extends": "@backstage/cli/config/tsconfig.json",
+    "include": ["src", "dev", "migrations"],
+    "exclude": ["node_modules"],
+    "compilerOptions": {
+        "outDir": "dist-types",
+        "rootDir": "."
+    }
 }
