--- a/packages/ldap-auth/package.json
+++ b/packages/ldap-auth/package.json
@@ -30,14 +30,17 @@
     "dependencies": {
         "@backstage/core-components": "^0.14.0",
         "@backstage/core-plugin-api": "^1.9.0",
-        "@backstage/theme": "^0.5.1",
-        "@material-ui/core": "^4.12.4",
+        "@backstage/theme": "^0.5.2",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/material": "^5.15.15",
+        "@mui/styles": "^5.15.15",
         "@react-hookz/web": "^23.0.0",
         "password-validator": "^5.3.0",
         "zod": "^3.17.3"
     },
     "peerDependencies": {
-        "react": "^16.13.1 || ^17.0.0"
+        "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
     },
     "devDependencies": {
         "@backstage/cli": "^0.22.0",
