chore: bump typescript, lerna and fix build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "exclude": ["node_modules", "examples"],
+    "include": ["packages"],
     "compilerOptions": {
+        "outDir": "dist-types",
+        "rootDir": ".",
         "allowJs": true,
         "declaration": true,
         "declarationMap": false,
