--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "eslint-plugin-prettier": "^5.0.0",
         "husky": "^8.0.1",
         "is-ci": "^3.0.1",
-        "lerna": "^7.2.0",
+        "lerna": "^8.1.7",
         "lint-staged": "^13.0.3",
         "markdown-toc": "^1.2.0",
         "prettier": "^3.0.3",
-        "typescript": "^5.2.2"
+        "typescript": "^5.5.3"
     },
     "engines": {
         "node": ">=18.0.0"
@@ -29,12 +29,13 @@
     "scripts": {
         "style:lint": "eslint packages --ext .ts",
         "style:prettier": "prettier \"packages/**/*.ts\" --list-different --write",
-        "build": "npx lerna run build",
+        "build": "tsc && npx lerna run build",
         "test": "lerna run test:ci",
         "bootstrap": "npx lerna bootstrap",
         "publish:ci": "lerna publish from-package --yes --pre-dist-tag alpha",
         "version:release": "lerna version --yes --conventional-commits --conventional-graduate --create-release github --message 'chore(release): publish'",
         "version:prerelease": "lerna version --yes --force-publish --conventional-commits --conventional-prerelease --create-release github --message 'chore(prerelease): publish'",
         "prepare": "node prepare.js || echo 'Skipping prepare'"
-    }
+    },
+    "packageManager": "yarn@4.3.1"
 }
