--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -49,7 +49,8 @@
         "@types/ldapjs": "^2.2.4",
         "@types/node": "^20.5.9",
         "@types/supertest": "^6.0.2",
-        "supertest": "^6.3.4"
+        "supertest": "^6.3.4",
+        "typescript": "^5.5.3"
     },
     "files": [
         "dist"
