ci: added build in test

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
             - name: Bootstrap lerna
               run: yarn
 
-            - name: Lerna build
+            - name: Build packages
               run: yarn build
 
             - name: Bump release
