fix(backstage): pluginPackage and pluginId

--- a/packages/ldap-auth-backend/package.json
+++ b/packages/ldap-auth-backend/package.json
@@ -14,7 +14,9 @@
         "directory": "packages/ldap-auth-backend"
     },
     "backstage": {
-        "role": "backend-plugin-module"
+        "role": "backend-plugin-module",
+        "pluginId": "auth",
+        "pluginPackage": "@backstage/plugin-auth-backend"
     },
     "scripts": {
         "start": "backstage-cli package start",
