--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
     "$schema": "node_modules/lerna/schemas/lerna-schema.json",
     "npmClient": "yarn",
-    "version": "4.3.1-alpha.0"
+    "version": "4.3.1"
 }
